--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,14 @@
         {
             "name": "Bondarenko Kirill",
             "email": "bondarenko.kirill@gmail.com"
+        },
+        {
+            "name": "Sereda Oleg",
+            "email": "zaxodu11@gmail.com"
         }
     ],
     "require": {
-        "laravel/framework": ">=5.1.1",
+        "laravel/framework": ">=5.3.0",
         "doctrine/dbal": "^2.5"
     },
     "autoload": {
