--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "laravel/framework": ">=5.3.0",
+        "laravel/framework": ">=5.3.*",
         "doctrine/dbal": "^2.5"
     },
     "autoload": {
